<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center"
        android:text="@string/support_tag"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/white_button"
        android:drawablePadding="-15dp"
        android:drawableStart="@drawable/ic_action_name"
        android:paddingEnd="@dimen/dimen_5"
        android:paddingStart="@dimen/dimen_5"
        android:text="@string/call_us"
        android:textColor="@color/script_blue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_mail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_button"
        android:drawablePadding="-15dp"
        android:drawableStart="@drawable/ic_action_mail"
        android:paddingEnd="@dimen/dimen_5"
        android:paddingStart="@dimen/dimen_5"
        android:text="@string/email_us"
        android:textColor="@color/script_blue"
        android:textStyle="bold" />
</LinearLayout>
